# FASMIFRA

./: Makefile  README.md  dune-project  fasmifra  fasmifra.opam  install.sh  test.sh  test_fragment.sh  test_gauss.sh
data/: CHEMBL_100k.smi.xz  TCM_20k.smi.xz  repr_Vs_FragW_chembl_100k.txt
src/: dune  fasmifra.ml  gauss.ml  gauss_test.ml  welford.ml  welford_test.ml
