
(executables
  (names        fasmifra)
  (public_names fasmifra)
  (libraries batteries dolog minicli unix str line_oriented)
  (modules welford gauss fasmifra))

;; never installed executables
(executables
  (names gauss_test welford_test)
  (modules gauss_test gauss welford_test welford)
  (libraries batteries dolog line_oriented))
